--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -27,7 +27,7 @@
     <color name="textColorReportDetails">#B4BAC0</color>
 
     <!-- Text color for the primary location of the earthquake in the list item -->
-    <color name="textColorReportLocation">#2B3D4D</color>
+    <color name="textColorReportArticle">#2B3D4D</color>
 
     <!-- Color for an earthquake with magnitude 0 and 2 -->
     <color name="magnitude1">#4A7BA7</color>
